syntax = "proto3";

package api.v1.service_account;

import "google/protobuf/timestamp.proto";
import "model/author.proto";

// Service account model.
message ServiceAccount {
  string name = 1; // Unique name of the service account.
  google.protobuf.Timestamp created_at = 2; // Creation date.
  model.Author created_by = 3; // Author of the service account.
  bool managed = 4; // Whether the service account is managed by the system.
  repeated string group_ids = 5; // List of group IDs the service account belongs to.
}
